--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-email/section": "0.0.10",
     "@react-email/tailwind": "0.0.11",
     "@react-email/text": "0.0.6",
-    "@types/node": "20.8.7",
+    "@types/node": "^20.10.6",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
@@ -38,6 +38,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
+    "sharp": "^0.33.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
